--- a/package.json
+++ b/package.json
@@ -13,14 +13,20 @@
   "devDependencies": {
     "@types/jest": "^29.4.0",
     "@types/node": "18.11.18",
-    "jest": "^29.4.1",
-    "ts-jest": "^29.0.5",
     "aws-cdk": "2.63.2",
+    "jest": "^29.4.1",
+    "plugin": "^0.3.3",
+    "serverless-offline": "^12.0.4",
+    "serverless-plugin-optimize": "^4.2.1-rc.1",
+    "serverless-plugin-typescript": "^2.1.5",
+    "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "~4.9.4"
   },
   "dependencies": {
     "aws-cdk-lib": "2.63.2",
+    "aws-lambda": "^1.0.7",
+    "aws-serverless-express": "^3.4.0",
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.21"
   }
